--- a/app/src/main/res/drawable/bg_exit.xml
+++ b/app/src/main/res/drawable/bg_exit.xml
@@ -16,6 +16,6 @@
         android:width="0.5dp"
         />
     <solid
-        android:color="@color/white"
+        android:color="#fdfcfa"
         />
 </shape>
