--- a/app/src/main/res/layout/welcome_set_text_new_layout.xml
+++ b/app/src/main/res/layout/welcome_set_text_new_layout.xml
@@ -40,6 +40,7 @@
             android:textColor="@color/app_text_type"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            style="@style/MyCheckboxStyle"
             android:text="设为默认欢迎词"
             />
 
