--- a/app/src/main/res/layout/include_empty_layout.xml
+++ b/app/src/main/res/layout/include_empty_layout.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:lineSpacingExtra="5dp"
+        android:gravity="center"
         android:id="@+id/tv_hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
