--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -114,7 +114,7 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <ImageView
+                    <com.savor.resturant.widget.CircleImageView
                         android:id="@+id/iv_header"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
